--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "stylelint \"**/*.scss\"",
     "lint:scss:fix": "stylelint \"**/*.scss\" --fix",
-    "unit": "jest --config ./config/jest/jest.config.js"
+    "unit": "jest --config config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -92,6 +92,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "shared": "^0.2.0"
   }
 }
