--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,27 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+name: listing, testing, building
+run-name: ${{ github.actor }} CI
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 jobs:
-  check-bats-version:
+  pipeline:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [17.x]
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          node-version: ${{matrix.node-version}}
+      - uses: install modules
+        run: npm install
+      - name: build production project
+        run: npm run build:prod
+      - name: linting scss
+        run: npm run lint:scss
+      - name: unit testing
+        run: npm run test:unit
