--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lint:scss:fix": "stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config config/jest/jest.config.ts",
     "test:ui": "npx loki test",
+    "test:ui:report": "npm run test:json && npm run test:html",
+    "test:json": "node scripts/generate-visual-json-report.js",
+    "test:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
