--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,14 @@
     "target": "es5",
     "jsx": "react-jsx",
     "allowJs": true,
-    //"moduleResolution": "node",
+    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
       "*": ["./src/*"]
     },
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "types": []
+    //"types": []
   },
   "ts-node": {
     "compilerOptions": {
